--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,32 @@
           </plugin>
         </plugins>
       </build>
+        <dependencies>
+
+
+
+            <dependency>
+
+                <groupId>com.sun.jersey</groupId>
+
+                <artifactId>jersey-core</artifactId>
+
+                <version>1.8</version>
+
+            </dependency>
+
+            <dependency>
+
+                <groupId>com.sun.jersey</groupId>
+
+                <artifactId>jersey-server</artifactId>
+
+                <version>1.8</version>
+
+            </dependency>
+
+        </dependencies>
+
     </profile>
   </profiles>
 </project>
