--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+      <!-- MongoDB Java Driver -->
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>2.13.2</version>
+      </dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -51,7 +57,14 @@
                 <artifactId>jersey-server</artifactId>
                 <version>1.8</version>
             </dependency>
+            <!-- MongoDB Java Driver -->
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>2.13.2</version>
+            </dependency>
         </dependencies>
+
     </profile>
   </profiles>
 </project>
