--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
           <artifactId>mongo-java-driver</artifactId>
           <version>2.13.2</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.2.2</version>
+      </dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -62,6 +67,12 @@
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongo-java-driver</artifactId>
                 <version>2.13.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.2.2</version>
+                <!--<scope>compile</scope>-->
             </dependency>
         </dependencies>
 
