change app display name

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <servlet>
-        <display-name>TestJerseyonJBoss</display-name>
+        <display-name>Todo Web App</display-name>
         <servlet-name>jersey-serlvet</servlet-name>
         <servlet-class>
             com.sun.jersey.spi.container.servlet.ServletContainer
