--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
           <artifactId>gson</artifactId>
           <version>2.2.2</version>
       </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -73,6 +78,11 @@
                 <artifactId>gson</artifactId>
                 <version>2.2.2</version>
                 <!--<scope>compile</scope>-->
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+                <version>1.2</version>
             </dependency>
         </dependencies>
 
