--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,11 +31,11 @@
 
         <init-param>
             <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-            <param-value>main.java.filters.LoggingFilter</param-value>
+            <param-value>main.java.ro.robertgabriel.filters.LoggingFilter</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-            <param-value>main.java.filters.LoggingFilter</param-value>
+            <param-value>main.java.ro.robertgabriel.filters.LoggingFilter</param-value>
         </init-param>
 
         <load-on-startup>1</load-on-startup>
@@ -43,14 +43,14 @@
 
     <servlet>
         <servlet-name>home-servlet</servlet-name>
-        <servlet-class>main.java.Home</servlet-class>
+        <servlet-class>ro.robertgabriel.Home</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-            <param-value>main.java.filters.LoggingFilter</param-value>
+            <param-value>main.java.ro.robertgabriel.filters.LoggingFilter</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-            <param-value>main.java.filters.LoggingFilter</param-value>
+            <param-value>main.java.ro.robertgabriel.filters.LoggingFilter</param-value>
         </init-param>
         <load-on-startup>2</load-on-startup>
     </servlet>
