--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,46 +16,55 @@
         </jsp-property-group>
     </jsp-config>
 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/resource/*</url-pattern>
+    </servlet-mapping>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/rootContext.xml</param-value>
+    </context-param>
+
     <servlet>
-        <display-name>Todo Web App</display-name>
-        <servlet-name>jersey-serlvet</servlet-name>
-        <servlet-class>
-            com.sun.jersey.spi.container.servlet.ServletContainer
-        </servlet-class>
-
-
+        <servlet-name>springDispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
-            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-            <param-value>true</param-value>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/servletContext.xml</param-value>
         </init-param>
-
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>springDispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
-    <servlet>
-        <servlet-name>home-servlet</servlet-name>
-        <servlet-class>ro.robertgabriel.Home</servlet-class>
-        <load-on-startup>2</load-on-startup>
-    </servlet>
     <filter>
         <filter-name>RequestLoggingFilter</filter-name>
         <filter-class>ro.robertgabriel.filters.LoggingRequestFilter</filter-class>
     </filter>
 
-    <servlet-mapping>
-        <servlet-name>jersey-serlvet</servlet-name>
-        <url-pattern>/services/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>home-servlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+
 
     <filter-mapping>
         <filter-name>RequestLoggingFilter</filter-name> <!-- mandatory -->
         <url-pattern>/*</url-pattern> <!-- either url-pattern or servlet-name is mandatory -->
-        <servlet-name>jersey-serlvet</servlet-name>
-        <servlet-name>home-servlet</servlet-name>
+
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
+
+
+    <session-config>
+        <session-timeout>30</session-timeout>
+        <cookie-config>
+            <http-only>true</http-only>
+        </cookie-config>
+        <tracking-mode>COOKIE</tracking-mode>
+    </session-config>
 </web-app>
