--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
           <artifactId>commons-lang</artifactId>
           <version>2.5</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+          <version>4.1.6.RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <profiles>
     <profile>
