--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
           <version>4.1.6.RELEASE</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-mongodb</artifactId>
+          <version>1.8.0.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.7.5</version>
+      </dependency>
   </dependencies>
   <profiles>
     <profile>
