--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,30 @@
           <version>4.1.6.RELEASE</version>
           <scope>compile</scope>
       </dependency>
+      <!-- Spring Data-->
       <dependency>
           <groupId>org.springframework.data</groupId>
           <artifactId>spring-data-mongodb</artifactId>
           <version>1.8.0.RELEASE</version>
       </dependency>
+      <!-- Spring Security-->
       <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>4.0.3.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>4.0.3.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-taglibs</artifactId>
+          <version>4.0.3.RELEASE</version>
+      </dependency>
+
+    <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-simple</artifactId>
           <version>1.7.5</version>
