--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,17 +16,17 @@
         </jsp-property-group>
     </jsp-config>
 
-    <filter>
-        <filter-name>RequestLoggingFilter</filter-name>
-        <filter-class>ro.robertgabriel.filters.LoggingRequestFilter</filter-class>
-    </filter>
+    <!--<filter>-->
+        <!--<filter-name>RequestLoggingFilter</filter-name>-->
+        <!--<filter-class>ro.robertgabriel.filters.LoggingRequestFilter</filter-class>-->
+    <!--</filter>-->
 
-    <filter-mapping>
-        <filter-name>RequestLoggingFilter</filter-name> <!-- mandatory -->
-        <url-pattern>/*</url-pattern> <!-- either url-pattern or servlet-name is mandatory -->
+    <!--<filter-mapping>-->
+        <!--<filter-name>RequestLoggingFilter</filter-name> &lt;!&ndash; mandatory &ndash;&gt;-->
+        <!--<url-pattern>/*</url-pattern> &lt;!&ndash; either url-pattern or servlet-name is mandatory &ndash;&gt;-->
 
-        <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
+        <!--<dispatcher>REQUEST</dispatcher>-->
+    <!--</filter-mapping>-->
 
 
     <session-config>
