--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
             <url-pattern>*.jspf</url-pattern>
             <page-encoding>UTF-8</page-encoding>
             <scripting-invalid>false</scripting-invalid>
-            <include-prelude>/WEB-INF/jsp/base.jspf</include-prelude>
+            <!--<include-prelude>/WEB-INF/jsp/base.jspf</include-prelude>-->
             <trim-directive-whitespaces>true</trim-directive-whitespaces>
             <default-content-type>text/html</default-content-type>
         </jsp-property-group>
