--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
 			<id>openshift</id>
 			<build>
-				<finalName>todotomcat</finalName>
+				<finalName>todo</finalName>
 				<plugins>
 					<plugin>
 						<artifactId>maven-war-plugin</artifactId>
